<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/respondWithPrompt"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/responseText"
        android:hint="@string/respondWithPrompt"/>
    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkboxLocation"
        android:text="@string/includelocationprompt"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/autoRespondDurationPrompt"/>
    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerRespondFor"
        android:drawSelectorOnTop="true"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/okButton"
            android:text="@string/enableButtonText"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelButton"
            android:text="@string/disableButtonText"/>
    </LinearLayout>

</LinearLayout>