<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/labelRequestList"
        android:text="@string/querylistprompt"
        android:layout_alignParentTop="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLayout"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_alignParentBottom="true">
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxSendLocation"
            android:text="@string/includelocationprompt"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/okButton"
            android:text="@string/allClearButtonText"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notOkButton"
            android:text="@string/maydayButtonText"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/autoResponder"
            android:text="@string/setupautoresponderButtonText"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/myListView"
        android:layout_below="@+id/labelRequestList"
        android:layout_above="@+id/buttonLayout"/>
</RelativeLayout>
